# raindrop-project

./: .gitignore  README.md  bodyPerformance.csv
backend/: main.py  pyproject.toml
backend/app/: clickhouse_client.py  config.py  main.py  schema.py  sql_generation.py  sql_grammar.py
backend/scripts/: smoke_sql_generate.py
backend/tests/: test_query_endpoint.py  test_sql_grammar.py
evals/: sql_execution_smoke.py  sql_generation_eval.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: query.ts
frontend/src/components/: QueryCard.tsx  ResultsCard.tsx  ResultsTable.tsx
frontend/src/components/ui/: card.tsx
frontend/src/constants/: examples.ts  fields.ts
frontend/src/types/: query.ts
